--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
   "devDependencies": {
     "@types/find-config": "^1.0.1",
     "@types/node": "^16.4.13",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
     "find-config": "^1.0.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
+    "qs": "^6.10.1",
     "telegraf": "^4.4.1",
+    "typegram": "^3.4.3",
     "typescript": "^4.3.5"
   }
 }
