--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "telegraf": "^4.4.1",
     "typegram": "^3.4.3",
     "typescript": "^4.3.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
   }
 }
